--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis sequi adipisci voluptatibus voluptas temporibus iusto voluptatum autem sit tenetur, dolor facere earum praesentium laborum illo. Id cupiditate sint ducimus at.
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/ui-ux.png" alt="UI/UX">
         </div>
     </section>
     <section class="event event--data-science">
@@ -68,7 +68,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis sequi adipisci voluptatibus voluptas temporibus iusto voluptatum autem sit tenetur, dolor facere earum praesentium laborum illo. Id cupiditate sint ducimus at.
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/data.png" alt="Data Science">
         </div>
     </section>
     <section class="event event--backend event--image-left">
@@ -79,7 +79,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis sequi adipisci voluptatibus voluptas temporibus iusto voluptatum autem sit tenetur, dolor facere earum praesentium laborum illo. Id cupiditate sint ducimus at.
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/backend.png" alt="Back-end">
         </div>
     </section>
 
