--- a/src/index.html
+++ b/src/index.html
@@ -13,73 +13,51 @@
 <body>
     <header class="hero">
         <div class="container">
-            <img class="hero__logo" src="/src/images/ebac_logo.svg" alt="EBAC">
+            <img src="./images/logo.png" alt="" class="hero__logo">
             <p class="hero__text">
-                O maior evento de tecnologia do Brasil <span id="contador"></span>
+                Este evento <span id="contador"></span>
             </p>
             <div class="infos-bar">
                 <ul class="infos-bar__infos">
                     <li class="infos-bar__infos__item">
                         <b>Localização</b>
-                        Allianz Parque - Barra Funda - São Paulo
+                        Minha casa - Número - Bairro - Múnicipio
                     </li>
                     <li class="infos-bar__infos__item">
-                        <b>Preço</b>
-                        Apartir de R$ 120,00
+                        <b>Levar</b>
+                        Sua bebida / comida Free
                     </li>
                     <li class="infos-bar__infos__item">
                         <b>Quando</b>
-                        12/12/2024 às 19Hrs
+                        02/09/2024 às 18Hrs
                     </li>
                 </ul>
                 <a href="#" class="button button--primary">
-                    Garanta sua vaga
+                    Confirmar presença
                 </a>
             </div>
         </div>
     </header>
     <section class="event event--frontend">
-        <div class="container" data-aos="fade-right">
+        <div class="container" data-aos="zoom-in" data-aos-duration="1000">
             <div class="event__details">
-                <h2 class="event__details__title">Front end</h2>
+                <h2 class="event__details__title">Música ao vivo</h2>
                 <p class="event__details__description">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis sequi adipisci voluptatibus voluptas temporibus iusto voluptatum autem sit tenetur, dolor facere earum praesentium laborum illo. Id cupiditate sint ducimus at.
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/musica_ao_vivo.png" alt="Front-end">
         </div>
     </section>
     <section class="event event--ux-ui event--image-left">
-        <div class="container" data-aos="fade-left">
+        <div class="container" data-aos="zoom-in" data-aos-duration="1000">
             <div class="event__details">
-                <h2 class="event__details__title">UI/UX</h2>
+                <h2 class="event__details__title">Banquete de salgados e Doces</h2>
                 <p class="event__details__description">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis sequi adipisci voluptatibus voluptas temporibus iusto voluptatum autem sit tenetur, dolor facere earum praesentium laborum illo. Id cupiditate sint ducimus at.
                 </p>
             </div>
-            <img class="event__image" src="./images/ui-ux.png" alt="UI/UX">
-        </div>
-    </section>
-    <section class="event event--data-science">
-        <div class="container" data-aos="fade-right">
-            <div class="event__details">
-                <h2 class="event__details__title">Data Science</h2>
-                <p class="event__details__description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis sequi adipisci voluptatibus voluptas temporibus iusto voluptatum autem sit tenetur, dolor facere earum praesentium laborum illo. Id cupiditate sint ducimus at.
-                </p>
-            </div>
-            <img class="event__image" src="./images/data.png" alt="Data Science">
-        </div>
-    </section>
-    <section class="event event--backend event--image-left">
-        <div class="container" data-aos="fade-left">
-            <div class="event__details">
-                <h2 class="event__details__title">Back end</h2>
-                <p class="event__details__description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis sequi adipisci voluptatibus voluptas temporibus iusto voluptatum autem sit tenetur, dolor facere earum praesentium laborum illo. Id cupiditate sint ducimus at.
-                </p>
-            </div>
-            <img class="event__image" src="./images/backend.png" alt="Back-end">
+            <img class="event__image" src="./images/banquete.png" alt="UI/UX">
         </div>
     </section>
 
